--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>DEMO GIT!!</title>
 </head>
 <body>
-    <h1>Welcome to Demo git!!</h1>
-    <p>This is sample text1</p>
+    <h1>Welcome to Demo git!!!</h1>
     <p>This is sample text2</p>
     <p>This is sample text3</p>
+    <p>This is sample text4</p>
+    <p>This is sample text5</p>
 </body>
 </html>
